Added payment integration